fixed spacing issues with rem update

--- a/src/components/animatedText/index.scss
+++ b/src/components/animatedText/index.scss
@@ -28,7 +28,7 @@
     letter-spacing: 0.05em;
     border: none;
     border-bottom: solid 1px;
-    line-height: 1.4rem;
+    line-height: 1.9rem;
     background: none;
     outline: none;
     outline: aliceblue;
