--- a/src/pages/about/index.scss
+++ b/src/pages/about/index.scss
@@ -121,7 +121,7 @@
     &-cta {
       font-family: 'chris-regular';
       position: absolute;
-      margin-top: 12rem;
+      margin-top: 14rem;
       opacity: 0;
       left: 0;
       right: 0;
